[package]
name = "sticker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
git2 = "0.18.1"
html5ever = "0.26.0"
kuchiki = "0.8.1"
markdown = "0.3.0"
markup5ever = "0.10.1"
markup5ever_rcdom = "0.2.0"
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.109"
tokio = { version = "1.35.1" , features = ["full"] }
